[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -73.0
margin_right = 68.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 136.0
margin_bottom = 22.0
text = "Iniciar"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 136.0
margin_bottom = 46.0
text = "Opções"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 136.0
margin_bottom = 70.0
text = "Sair"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
